run credo in ci

--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -91,3 +91,6 @@ jobs:
     # Step: Execute the tests.
     - name: Run tests
       run: mix test
+    # Step: Execute the tests.
+    - name: Run credo
+      run: mix credo
